<resources>
    <string name="app_name">textSelector</string>
    <string name="pin_start">Pin Start</string>
    <string name="pin_end">Pin End</string>
    <string name="load">Load</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="search_term">Search term</string>
    <string name="paste">Paste</string>
    <string name="selection_name">Selection Name</string>
    <string name="save_selection">Save Selection</string>
    <string name="preview">Preview</string>
    <string name="cancel">Cancel</string>
    <string name="library">Library</string>
    <string name="saved_selections">Saved Selections</string>
    <string name="previous_result">Previous result</string>
    <string name="next_result">Next result</string>
    <string name="pin_active">PIN ACTIVE</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="saved_selections_header">Your Saved Text Selections</string>
    <string name="hint_paste_text">Paste your text here</string>
    <string name="empty_counter">0/0</string>
    <string name="selection_saved">Selection saved</string>
    <string name="no_selections">No selections available</string>
    <string name="delete_selection">Delete Selection</string>
    <string name="delete_confirmation">Are you sure you want to delete %1$s?</string>
    <string name="delete">Delete</string>
    <string name="selection_deleted">Selection deleted</string>
    <string name="dialog_edit_selection">Edit Selection</string>
    <string name="edit_selection">Edit Selection</string>
    <string name="selection_updated">Selection updated</string>
    <string name="about">About</string>
    <string name="ok">OK</string>
</resources>